[package]
name = "session-signer"
version = "0.1.0"
edition = "2021"
authors = ["Ariane <dev@wenzelarifiandi.com>"]
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
sha2 = "0.10"
hmac = "0.12"
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
